# rules_sass

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  internal_deps.bzl  package.json  pnpm-lock.yaml
examples/demo/: BUILD.bazel
examples/hello_world/: BUILD
examples/imports_css/: BUILD
examples/nested/: BUILD
sass/: BUILD  dependencies.bzl  npm_sass_library.bzl  sass.bzl
sass/docs/: BUILD
sass/private/: BUILD.bazel  sass_wrapper.js
sass/test/npm_sass_library/: BUILD  test_fixture.scss
sass/test/npm_sass_library/test_external_pkg/: BUILD
